Home Assistant API integration (#8)
* Add Docker support
* Switch to Java 21 virtual threads