@@ -1,5 +1,18 @@
-package at.sv.hue.api;
+package at.sv.hue.api.hue;
 
+import at.sv.hue.api.ApiFailure;
+import at.sv.hue.api.BridgeAuthenticationFailure;
+import at.sv.hue.api.Capability;
+import at.sv.hue.api.EmptyGroupException;
+import at.sv.hue.api.GroupNotFoundException;
+import at.sv.hue.api.HttpResourceProvider;
+import at.sv.hue.api.HueApi;
+import at.sv.hue.api.InvalidConnectionException;
+import at.sv.hue.api.LightCapabilities;
+import at.sv.hue.api.LightNotFoundException;
+import at.sv.hue.api.LightState;
+import at.sv.hue.api.PutCall;
+import at.sv.hue.api.RateLimiter;
 import com.fasterxml.jackson.annotation.JsonInclude;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.core.type.TypeReference;
@@ -8,8 +21,10 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.Data;
 
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.EnumSet;
@@ -28,32 +43,39 @@ public final class HueApiImpl implements HueApi {
     private final Object lightMapLock = new Object();
     private final Object groupMapLock = new Object();
     private final RateLimiter rateLimiter;
-    private Map<Integer, Light> availableLights;
+    private Map<String, Light> availableLights;
     private boolean availableLightsInvalidated;
-    private Map<Integer, Group> availableGroups;
+    private Map<String, Group> availableGroups;
     private boolean availableGroupsInvalidated;
-    private Map<String, Integer> lightNameToIdMap;
+    private Map<String, String> lightNameToIdMap;
     private boolean lightNameToIdMapInvalidated;
-    private Map<String, Integer> groupNameToIdMap;
+    private Map<String, String> groupNameToIdMap;
     private boolean groupNameToIdMapInvalidated;
 
-    public HueApiImpl(HttpResourceProvider resourceProvider, String ip, String username, RateLimiter rateLimiter) {
+    public HueApiImpl(HttpResourceProvider resourceProvider, String host, String accessToken, RateLimiter rateLimiter) {
         this.resourceProvider = resourceProvider;
         mapper = new ObjectMapper();
         mapper.disable(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES);
         mapper.setSerializationInclusion(JsonInclude.Include.NON_NULL);
-        baseApi = "https://" + ip + "/api/" + username;
+        assertNotHttpSchemeProvided(host);
+        baseApi = "https://" + host + "/api/" + accessToken;
         this.rateLimiter = rateLimiter;
     }
 
+    private static void assertNotHttpSchemeProvided(String host) {
+        if (host.toLowerCase(Locale.ROOT).startsWith("http")) {
+            throw new InvalidConnectionException("Invalid host provided. Hue Bridge host can't contain a scheme: " + host);
+        }
+    }
+
     @Override
-    public LightState getLightState(int id) {
-        String response = getResourceAndAssertNoErrors(getLightStateUrl(id));
+    public LightState getLightState(String id) {
+        String response = getResourceAndAssertNoErrors(createUrl(id));
         try {
             Light light = mapper.readValue(response, Light.class);
             return createLightState(light);
         } catch (JsonProcessingException | NullPointerException e) {
-            throw new HueApiFailure("Failed to parse light state response '" + response + "' for id " + id + ": " + e.getLocalizedMessage());
+            throw new ApiFailure("Failed to parse light state response '" + response + "' for id " + id + ": " + e.getLocalizedMessage());
         }
     }
 
@@ -65,9 +87,9 @@ public final class HueApiImpl implements HueApi {
     }
 
     @Override
-    public List<LightState> getGroupStates(int id) {
-        List<Integer> groupLights = getGroupLights(id);
-        Map<Integer, Light> currentLights = lookupLights();
+    public List<LightState> getGroupStates(String id) {
+        List<String> groupLights = getGroupLights(id);
+        Map<String, Light> currentLights = lookupLights();
         return groupLights.stream()
                           .map(currentLights::get)
                           .filter(Objects::nonNull)
@@ -107,9 +129,10 @@ public final class HueApiImpl implements HueApi {
                 case 1:
                     throw new BridgeAuthenticationFailure();
                 case 201:
-                    throw new LightIsOff();
+                    // ignore
+                    break;
                 default:
-                    throw new HueApiFailure(description);
+                    throw new ApiFailure(description);
             }
         }
     }
@@ -129,37 +152,44 @@ public final class HueApiImpl implements HueApi {
         return null;
     }
 
-    private URL getLightStateUrl(int id) {
-        return createUrl("/lights/" + id);
-    }
-
     private URL createUrl(String url) {
         try {
-            return new URL(baseApi + url);
-        } catch (MalformedURLException e) {
+            return new URI(baseApi + url).toURL();
+        } catch (MalformedURLException | URISyntaxException e) {
             throw new IllegalArgumentException("Failed to construct API url", e);
         }
     }
 
     @Override
-    public boolean putState(PutCall putCall) {
+    public boolean isLightOff(String id) {
+        return getLightState(id).isOff();
+    }
+
+    @Override
+    public boolean isGroupOff(String id) {
+        String response = getResourceAndAssertNoErrors(createUrl(id));
+        try {
+            Group group = mapper.readValue(response, Group.class);
+            return Boolean.FALSE == group.state.any_on;
+        } catch (JsonProcessingException | NullPointerException e) {
+            throw new ApiFailure("Failed to parse group state response '" + response + "' for id " + id + ": " + e.getLocalizedMessage());
+        }
+    }
+
+    @Override
+    public void putState(PutCall putCall) {
         if (putCall.isGroupState()) {
             rateLimiter.acquire(10);
         } else {
             rateLimiter.acquire(1);
         }
-        return assertNoPutErrors(resourceProvider.putResource(getUpdateUrl(putCall.id, putCall.groupState),
-                getBody(new State(putCall.bri, putCall.ct, putCall.x, putCall.y, putCall.hue, putCall.sat, putCall.effect,
-                        putCall.on, putCall.transitionTime))));
+        assertNoPutErrors(resourceProvider.putResource(getUpdateUrl(putCall.getId(), putCall.isGroupState()),
+                getBody(new State(putCall.getBri(), putCall.getCt(), putCall.getX(), putCall.getY(), putCall.getHue(),
+                        putCall.getSat(), putCall.getEffect(), putCall.getOn(), putCall.getTransitionTime()))));
     }
 
-    private boolean assertNoPutErrors(String putResource) {
-        try {
-            assertNoErrors(putResource);
-            return true;
-        } catch (LightIsOff e) {
-            return false;
-        }
+    private void assertNoPutErrors(String putResource) {
+        assertNoErrors(putResource);
     }
 
     private String getBody(State state) {
@@ -171,25 +201,25 @@ public final class HueApiImpl implements HueApi {
     }
 
     @Override
-    public List<Integer> getGroupLights(int groupId) {
+    public List<String> getGroupLights(String groupId) {
         Group group = getAndAssertGroupExists(groupId);
-        Integer[] lights = group.lights;
-        if (lights.length == 0) {
+        List<String> lights = group.getLights();
+        if (lights.isEmpty()) {
             throw new EmptyGroupException("Group with id '" + groupId + "' has no lights to control!");
         }
-        return Arrays.asList(lights);
+        return lights;
     }
 
     @Override
-    public List<Integer> getAssignedGroups(int lightId) {
+    public List<String> getAssignedGroups(String lightId) {
         return getOrLookupGroups().entrySet()
                                   .stream()
-                                  .filter(entry -> Arrays.asList(entry.getValue().getLights()).contains(lightId))
+                                  .filter(entry -> entry.getValue().getLights().contains(lightId))
                                   .map(Map.Entry::getKey)
                                   .collect(Collectors.toList());
     }
 
-    private Map<Integer, Group> getOrLookupGroups() {
+    private Map<String, Group> getOrLookupGroups() {
         synchronized (groupMapLock) {
             if (availableGroups == null || availableGroupsInvalidated) {
                 availableGroups = lookupGroups();
@@ -199,14 +229,20 @@ public final class HueApiImpl implements HueApi {
         return availableGroups;
     }
 
-    private Map<Integer, Group> lookupGroups() {
+    private Map<String, Group> lookupGroups() {
         String response = getResourceAndAssertNoErrors(getGroupsUrl());
         try {
-            return mapper.readValue(response, new TypeReference<Map<Integer, Group>>() {
-            });
+            return addKeyPrefix(mapper.readValue(response, new TypeReference<>() {
+            }), "/groups/");
         } catch (JsonProcessingException e) {
-            throw new HueApiFailure("Failed to parse groups response '" + response + "': " + e.getLocalizedMessage());
+            throw new ApiFailure("Failed to parse groups response '" + response + "': " + e.getLocalizedMessage());
         }
+    }
+
+    private static <V> Map<String, V> addKeyPrefix(Map<String, V> map, String prefix) {
+        return map.entrySet()
+                  .stream()
+                  .collect(Collectors.toMap(entry -> prefix + entry.getKey(), Map.Entry::getValue));
     }
 
     private URL getGroupsUrl() {
@@ -214,15 +250,15 @@ public final class HueApiImpl implements HueApi {
     }
 
     @Override
-    public int getGroupId(String name) {
-        Integer groupId = getOrLookupGroupNameToIdMap().get(name);
+    public String getGroupId(String name) {
+        String groupId = getOrLookupGroupNameToIdMap().get(name);
         if (groupId == null) {
             throw new GroupNotFoundException("Group with name '" + name + "' was not found!");
         }
         return groupId;
     }
 
-    private Map<String, Integer> getOrLookupGroupNameToIdMap() {
+    private Map<String, String> getOrLookupGroupNameToIdMap() {
         synchronized (groupMapLock) {
             if (groupNameToIdMap == null || groupNameToIdMapInvalidated) {
                 groupNameToIdMap = new HashMap<>();
@@ -234,11 +270,11 @@ public final class HueApiImpl implements HueApi {
     }
 
     @Override
-    public String getGroupName(int groupId) {
+    public String getGroupName(String groupId) {
         return getAndAssertGroupExists(groupId).name;
     }
 
-    private Group getAndAssertGroupExists(int groupId) {
+    private Group getAndAssertGroupExists(String groupId) {
         Group group = getOrLookupGroups().get(groupId);
         if (group == null) {
             throw new GroupNotFoundException("Group with id '" + groupId + "' not found!");
@@ -247,15 +283,15 @@ public final class HueApiImpl implements HueApi {
     }
 
     @Override
-    public int getLightId(String name) {
-        Integer lightId = getOrLookupLightNameToIdMap().get(name);
+    public String getLightId(String name) {
+        String lightId = getOrLookupLightNameToIdMap().get(name);
         if (lightId == null) {
             throw new LightNotFoundException("Light with name '" + name + "' was not found!");
         }
         return lightId;
     }
 
-    private Map<String, Integer> getOrLookupLightNameToIdMap() {
+    private Map<String, String> getOrLookupLightNameToIdMap() {
         synchronized (lightMapLock) {
             if (lightNameToIdMap == null || lightNameToIdMapInvalidated) {
                 lightNameToIdMap = new HashMap<>();
@@ -266,7 +302,7 @@ public final class HueApiImpl implements HueApi {
         return lightNameToIdMap;
     }
 
-    private Map<Integer, Light> getOrLookupLights() {
+    private Map<String, Light> getOrLookupLights() {
         synchronized (lightMapLock) {
             if (availableLights == null || availableLightsInvalidated) {
                 availableLights = lookupLights();
@@ -276,23 +312,23 @@ public final class HueApiImpl implements HueApi {
         return availableLights;
     }
 
-    private Map<Integer, Light> lookupLights() {
+    private Map<String, Light> lookupLights() {
         String response = getResourceAndAssertNoErrors(getLightsUrl());
         try {
-            return mapper.readValue(response, new TypeReference<Map<Integer, Light>>() {
-            });
+            return addKeyPrefix(mapper.readValue(response, new TypeReference<>() {
+            }), "/lights/");
         } catch (JsonProcessingException e) {
-            throw new HueApiFailure("Failed to parse lights response '" + response + "': " + e.getLocalizedMessage());
+            throw new ApiFailure("Failed to parse lights response '" + response + "': " + e.getLocalizedMessage());
         }
     }
 
     @Override
-    public String getLightName(int id) {
+    public String getLightName(String id) {
         Light light = getAndAssertLightExists(id);
         return light.name;
     }
 
-    private Light getAndAssertLightExists(int id) {
+    private Light getAndAssertLightExists(String id) {
         Light light = getOrLookupLights().get(id);
         if (light == null) {
             throw new LightNotFoundException("Light with id '" + id + "' not found!");
@@ -301,7 +337,7 @@ public final class HueApiImpl implements HueApi {
     }
 
     @Override
-    public LightCapabilities getLightCapabilities(int id) {
+    public LightCapabilities getLightCapabilities(String id) {
         Light light = getAndAssertLightExists(id);
         return createLightCapabilities(light);
     }
@@ -333,7 +369,7 @@ public final class HueApiImpl implements HueApi {
     }
 
     @Override
-    public LightCapabilities getGroupCapabilities(int id) {
+    public LightCapabilities getGroupCapabilities(String id) {
         List<LightCapabilities> lightCapabilities = getGroupLights(id)
                 .stream()
                 .map(this::getLightCapabilities)
@@ -395,20 +431,15 @@ public final class HueApiImpl implements HueApi {
         if (type == null) {
             return EnumSet.noneOf(Capability.class);
         }
-        switch (type.toLowerCase(Locale.ENGLISH)) {
-            case "extended color light":
-                return EnumSet.allOf(Capability.class);
-            case "color light":
-                return EnumSet.of(Capability.COLOR, Capability.BRIGHTNESS, Capability.ON_OFF);
-            case "color temperature light":
-                return EnumSet.of(Capability.COLOR_TEMPERATURE, Capability.BRIGHTNESS, Capability.ON_OFF);
-            case "dimmable light":
-                return EnumSet.of(Capability.BRIGHTNESS, Capability.ON_OFF);
-            case "on/off plug-in unit":
-                return EnumSet.of(Capability.ON_OFF);
-            default:
-                return EnumSet.noneOf(Capability.class);
-        }
+        return switch (type.toLowerCase(Locale.ENGLISH)) {
+            case "extended color light" -> EnumSet.allOf(Capability.class);
+            case "color light" -> EnumSet.of(Capability.COLOR, Capability.BRIGHTNESS, Capability.ON_OFF);
+            case "color temperature light" ->
+                    EnumSet.of(Capability.COLOR_TEMPERATURE, Capability.BRIGHTNESS, Capability.ON_OFF);
+            case "dimmable light" -> EnumSet.of(Capability.BRIGHTNESS, Capability.ON_OFF);
+            case "on/off plug-in unit" -> EnumSet.of(Capability.ON_OFF);
+            default -> EnumSet.noneOf(Capability.class);
+        };
     }
 
     @Override
@@ -420,11 +451,11 @@ public final class HueApiImpl implements HueApi {
         return createUrl("/lights");
     }
 
-    private URL getUpdateUrl(int id, boolean groupState) {
+    private URL getUpdateUrl(String id, boolean groupState) {
         if (groupState) {
-            return createUrl("/groups/" + id + "/action");
+            return createUrl(id + "/action");
         } else {
-            return createUrl("/lights/" + id + "/state");
+            return createUrl(id + "/state");
         }
     }
 
@@ -493,7 +524,19 @@ public final class HueApiImpl implements HueApi {
     @Data
     private static final class Group {
         String name;
-        Integer[] lights = new Integer[0];
+        private List<String> lights = new ArrayList<>();
+        GroupState state;
+
+        List<String> getLights() {
+            return lights.stream()
+                         .map(id -> "/lights/" + id)
+                         .collect(Collectors.toList());
+        }
+    }
+
+    @Data
+    private static final class GroupState {
+        Boolean any_on;
     }
 
     @Data
@@ -506,10 +549,5 @@ public final class HueApiImpl implements HueApi {
         int type;
         String address;
         String description;
-    }
-
-    private static final class LightIsOff extends RuntimeException {
-        private LightIsOff() {
-        }
     }
 }
